--- a/theme/repo.pug
+++ b/theme/repo.pug
@@ -10,7 +10,7 @@ section#contributors
   if contributors
     ul
       each contrib in contributors.slice(3)
-        li= contrib.username
+        li= contrib.login
   else
     p No one has contributed to this project
 
